build_error.log
src/kernel/wm.c: In function 'wm_handle_click':
src/kernel/wm.c:1491:29: warning: this 'if' clause does not guard... [-Wmisleading-indentation]
 1491 |                             if (col < 0) col = 0; if (row < 0) row = 0;
      |                             ^~
src/kernel/wm.c:1491:51: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'if'
 1491 |                             if (col < 0) col = 0; if (row < 0) row = 0;
      |                                                   ^~
src/kernel/wm.c: In function 'wm_handle_mouse':
src/kernel/wm.c:1884:17: error: implicit declaration of function 'cli_cmd_shutdown' [-Wimplicit-function-declaration]
 1884 |                 cli_cmd_shutdown(NULL);
      |                 ^~~~~~~~~~~~~~~~
src/kernel/wm.c:1886:17: error: implicit declaration of function 'cli_cmd_reboot' [-Wimplicit-function-declaration]
 1886 |                 cli_cmd_reboot(NULL);
      |                 ^~~~~~~~~~~~~~
src/kernel/wm.c:2083:41: warning: this 'if' clause does not guard... [-Wmisleading-indentation]
 2083 |                                         if (col < 0) col = 0; if (row < 0) row = 0;
      |                                         ^~
src/kernel/wm.c:2083:63: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'if'
 2083 |                                         if (col < 0) col = 0; if (row < 0) row = 0;
      |                                                               ^~
src/kernel/wm.c: At top level:
src/kernel/wm.c:1057:13: warning: 'erase_cursor' defined but not used [-Wunused-function]
 1057 | static void erase_cursor(int x, int y) {
      |             ^~~~~~~~~~~~
src/kernel/wm.c:976:13: warning: 'draw_dock_editor' defined but not used [-Wunused-function]
  976 | static void draw_dock_editor(int x, int y) {
      |             ^~~~~~~~~~~~~~~~
src/kernel/wm.c:82:13: warning: 'cursor_visible' defined but not used [-Wunused-variable]
   82 | static bool cursor_visible = true;
      |             ^~~~~~~~~~~~~~
src/kernel/wm.c:79:12: warning: 'desktop_refresh_timer' defined but not used [-Wunused-variable]
   79 | static int desktop_refresh_timer = 0;
      |            ^~~~~~~~~~~~~~~~~~~~~
